syntax = "proto3";

option go_package = "google.golang.org/grpc/greet";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc GetRandNum (NumRequest) returns (stream NumReply);
}

message NumRequest {
  string name = 1;
}

message NumReply {
  string message = 1;
}